// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`presets should return correct preset data 1`] = `
Object {
  "transform": Object {
    "^.+\\\\.tsx?$": "ts-jest",
  },
}
`;

exports[`presets should return correct preset data 2`] = `
Object {
  "transform": Object {
    "^.+\\\\.[tj]sx?$": "ts-jest",
  },
}
`;

exports[`presets should return correct preset data 3`] = `
Object {
  "transform": Object {
    "^.+\\\\.jsx?$": "babel-jest",
    "^.+\\\\.tsx?$": "ts-jest",
  },
}
`;
